<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:id="@+id/profile_image"
        android:contentDescription="TODO"
        android:background=""/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/paul_chacha_wambura"
        android:textStyle="bold"
        android:textSize="30sp"
        android:fontFamily="@font/LIONELLO"
        android:textColor="@color/black"
        android:id="@+id/name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:text="@string/track_android"
        android:textStyle="bold"
        android:textSize="30sp"
        android:fontFamily="@font/LIONELLO"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        android:id="@+id/track"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/track"
        android:text="@string/country_kenya"
        android:textStyle="bold"
        android:textSize="30sp"
        android:fontFamily="@font/LIONELLO"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:id="@+id/country"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/country"
        android:text="@string/email_paulwambura_gmail_com"
        android:textStyle="bold"
        android:textSize="27sp"
        android:fontFamily="@font/LIONELLO"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:id="@+id/email"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:text="@string/phone_number_254716139670"
        android:textStyle="bold"
        android:textSize="27sp"
        android:fontFamily="@font/LIONELLO"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:id="@+id/phone"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone"
        android:text="@string/slack_username_chachawambura"
        android:textStyle="bold"
        android:textSize="27sp"
        android:fontFamily="@font/LIONELLO"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        />

</RelativeLayout>