<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/welcome_to_alc_4_0"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        android:fontFamily="@font/LIONELLO"/>

        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/my_profile"
            android:id="@+id/my_profile"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/yellow"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:fontFamily="@font/LIONELLO"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/my_profile"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/yellow"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="35dp"
        android:id="@+id/about_alc"
        android:text="@string/about_alc"
        android:textSize="25sp"
        android:fontFamily="@font/LIONELLO"
        />








</RelativeLayout>